modificaciones pagina principal

--- a/principal/landing.html
+++ b/principal/landing.html
@@ -37,16 +37,27 @@
         <div class="container">
            
             <ul class="st-nav-menu nav navbar-nav">
-                <li class="st-nav-section nav-item"><a href="#main" class="navbar-brand"><img src="img/nuevo/logo_wakypet.svg" alt="Dashcore" class="logo logo-sticky"></a></li>
+                <li class="st-nav-section nav-item" style="flex-grow: 1;"><a href="#main" class="navbar-brand"><img src="img/nuevo/logo_wakypet.svg" alt="Dashcore" class="logo logo-sticky"></a></li>
                 
-                <li class="st-nav-section st-nav-primary stick-right nav-item">
-                    <a class="st-root-link nav-link px-2" href=" https://wakypet.com/contactanos" target="_blank">Contáctanos </a>
+                <!-- <li class="st-nav-section st-nav-primary stick-right nav-item">
+                    <a class="st-root-link nav-link px-2" href=" https://wakypet.com/contactanos" target="_blank">Contáctanos </a> -->
                 <li class="st-nav-section st-nav-secondary nav-item">
-                <a class="btn btn-rounded btn-outline mr-3 px-2" href="https://wakypet.com/ser-paseador-de-perros" target="_blank">                
-                <i class="fas fa-user-plus d-none d-md-inline mr-md-0 mr-lg-2"></i> <span class="d-md-none d-lg-inline">Quiero ser paseador</span></a></li>
-                <li>
-                <a class="btn btn-rounded btn-outline mr-3 px-2" href="https://wakypet.com/ser-veterinario" target="_blank">
-                <i class="fas fa-user-plus d-none d-md-inline mr-md-0 mr-lg-2"></i> <span class="d-md-none d-lg-inline">Quiero ser veterinario</span></a></li>
+                    <a class="btn btn-rounded btn-outline mr-3 px-2" href="https://wakypet.com/consultas-veterinarias-domicilio" target="_blank">                
+                        <i class="fas fa-user-plus d-none d-md-inline mr-md-0 mr-lg-2"></i> 
+                        <span class="d-lg-inline">Consulta Veterinaria</span>
+                    </a>
+                </li>               
+                <li class="st-nav-section st-nav-secondary nav-item">
+                    <a class="btn btn-rounded btn-outline mr-3 px-2" href="https://wakypet.com/ser-paseador-de-perros" target="_blank">                
+                        <i class="fas fa-user-plus d-none d-md-inline mr-md-0 mr-lg-2"></i> 
+                        <span class="d-md-none d-lg-inline">Ser paseador</span>
+                    </a>
+                </li>
+                <li class="st-nav-section st-nav-secondary nav-item">
+                    <a class="btn btn-rounded btn-outline mr-3 px-2" href="https://wakypet.com/ser-veterinario" target="_blank">
+                    <i class="fas fa-user-plus d-none d-md-inline mr-md-0 mr-lg-2"></i> 
+                    <span class="d-md-none d-lg-inline">Ser veterinario</span></a>
+                </li>
 
                 <li class="st-nav-section st-nav-mobile nav-item"><button class="st-root-link navbar-toggler" type="button"><span class="icon-bar"></span>
                  <span class="icon-bar"></span> <span class="icon-bar"></span></button>
@@ -54,9 +65,10 @@
                         <div class="st-popup-container"><a class="st-popup-close-button">Cerrar</a>
                             <div class="st-dropdown-content-group">
                                 <h4 class="text-uppercase regular">Menú</h4>
+                                <a class="regular text-success" href="https://wakypet.com/consultas-veterinarias-domicilio" target="_blank"><i class="fas fa-user-plus mr-2"></i> Consulta veterinaria</a>
                                 <a class="regular text-primary" href="https://wakypet.com/ser-paseador-de-perros" target="_blank"><i class="fas fa-user-plus mr-2"></i> Quiero ser paseador </a>
                                 <a class="regular text-primary" href="https://wakypet.com/ser-veterinario" target="_blank"><i class="fas fa-user-plus mr-2"></i> Quiero ser veterinario </a>
-                                <a class="regular text-success" href="https://wakypet.com/contactanos" target="_blank"><i class="far fa-envelope mr-2"></i> Contáctanos</a>                                
+                                <!-- <a class="regular text-success" href="https://wakypet.com/contactanos" target="_blank"><i class="far fa-envelope mr-2"></i> Contáctanos</a>                                 -->
                             </div>
                         </div>
                     </div>
@@ -198,7 +210,7 @@
                         <!-- <p class="lead bold text-primary">Paseos <span class="head-line-2">de mascotas en Colombia</span></p> -->
                         <!-- <p class="lead">Por esto queremos conectarte con personas que te ayudarán a pasear a tu mascota de una forma segura ya que todos los paseos cuentan con la protección de SURA y de una forma eficiente porque podrás encontrar un paseador disponible en menos de 5 minutos.</p> -->
                         <p class="lead" style="font-size: 1rem;">
-                            Programa un paseo seguro para tu mascota en menos de 5 minutos. Todos nuestros paseos cuentan con 
+                            Programa un paseo seguro para tu mascota, encuentra un paseador en menos de 5 minutos. Todos nuestros paseos cuentan con 
                             la protección de Sura, además conoce nuestro <span style="font-weight: 900;">nuevo servicio de 
                             consulta de veterinaria virtual o en casa.</span>
                         </p>
@@ -332,7 +344,7 @@
                                 <img src="./img/nuevas/logo_sura.svg" alt="" class="img-tiempo-real">
                             </div>
                             <div class="media-body" style="margin: auto;">
-                                <h5 class="title-blue">Conviértete en paseador</h5>
+                                <h5 class="title-blue">Con el respaldo de SURA</h5>
                                 <div>Tu mascota estará asegurada durante todo <br> su paseo.</div>
                             </div>
                         </div>
@@ -367,25 +379,25 @@
                     <div class="col-xs-4 col-md-3 text-center">
                         <!-- <i data-feather="box" width="36" height="36"></i> -->
                         <img src="img/nuevas/ic_paseos.svg" alt="" class="img-loading">
-                        <p class="counter bold font-md mt-0 mb-0">14.200+</p>
+                        <p class="counter bold font-md mt-0 mb-0">17.000+</p>
                         <p class="m-0" style="font-weight: 600;">Paseos realizados</p>
                     </div>
                     <div class="col-xs-4 col-md-3 text-center">
                         <!-- <i data-feather="download-cloud" width="36" height="36"></i> -->
                         <img src="img/nuevas/ic_flecha.svg" alt="" class="img-loading">
-                        <p class="counter bold font-md mt-0 mb-0">64.600</p>
+                        <p class="counter bold font-md mt-0 mb-0">70.000</p>
                         <p class="m-0" style="font-weight: 600;">Descargas</p>
                     </div>
                     <div class="col-xs-4 col-md-3 text-center">
                         <!-- <i data-feather="anchor" width="36" height="36"></i> -->
                         <img src="img/nuevas/ic_seguidores.svg" alt="" class="img-loading">
-                        <p class="counter bold font-md mt-0 mb-0">7.000</p>
+                        <p class="counter bold font-md mt-0 mb-0">7.500</p>
                         <p class="m-0" style="font-weight: 600;">Seguidores</p>
                     </div>
                     <div class="col-xs-4 col-md-3 text-center">
                         <!-- <i data-feather="award" width="36" height="36"></i> -->
                         <img src="img/nuevas/ic_usuarios.svg" alt="" class="img-loading">
-                        <p class="counter bold font-md mt-0 mb-0">33.000</p>
+                        <p class="counter bold font-md mt-0 mb-0">40.000</p>
                         <p class="m-0" style="font-weight: 600;">Usuarios registrados</p>
                     </div>
                 </div>
@@ -636,7 +648,9 @@
                     </div>
                 </div>
                 <hr>
-                <nav class="nav small"><a href="#" class="text-secondary mr-3">Privacy policy</a> <a href="#" class="text-secondary">Terms</a></nav>
+                <nav class="nav small"><a href="https://wakypet.com/terminos.pdf" target="_blank" class="text-secondary mr-3">Términos y condiciones</a>
+                    <!-- <a href="#" class="text-secondary">Términos y condiciones</a> -->
+                </nav>
             </div>
 
             <!-- Widget WhatsApp -->
